--- a/blueprints/world_cup_contest_deployment_1.0.1.yaml
+++ b/blueprints/world_cup_contest_deployment_1.0.1.yaml
@@ -11,7 +11,7 @@ spec:
     spec: 
       containers:
       - name: world_cup_contest
-        image: tonyqui/k8s-demo
+        image: tonyqui/k8s-demo:0.1
         ports:
           - containerPort: 8080
         livenessProbe:
