--- a/blueprints/world_cup_contest_pod_1.0.0.yaml
+++ b/blueprints/world_cup_contest_pod_1.0.0.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    test: world_cup_contest
-  name: world_cup_contest_1.0.0
+    name: world-cup-contest
 spec:
   containers:
-  - name: world_cup_contest
+  - name: world-cup-contest
     image: tonyqui/k8s-demo:0.1
     ports:
       - containerPort: 8080
