--- a/blueprints/world_cup_contest_pod_1.0.0.yaml
+++ b/blueprints/world_cup_contest_pod_1.0.0.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-    name: world-cup-contest
+  name: world-cup-contest
+  labels:
+    app: world-cup-contest
 spec:
   containers:
   - name: world-cup-contest
