Made a typo, specifying twice the livenessprobe

--- a/blueprints/world_cup_contest_pod_1.0.0.yaml
+++ b/blueprints/world_cup_contest_pod_1.0.0.yaml
@@ -19,7 +19,7 @@ spec:
           value: READY
       initialDelaySeconds: 3
       periodSeconds: 3
-    livenessProbe:
+    readinessProbe:
       httpGet:
         path: /healthCheck
         port: 8080
