--- a/blueprints/world_cup_contest_deployment_1.0.1.yaml
+++ b/blueprints/world_cup_contest_deployment_1.0.1.yaml
@@ -23,7 +23,7 @@ spec:
               value: READY
           initialDelaySeconds: 3
           periodSeconds: 3
-        livenessProbe:
+        readinessProbe:
           httpGet:
             path: /healthCheck
             port: 8080
