--- a/blueprints/world_cup_contest_deployment_1.0.1.yaml
+++ b/blueprints/world_cup_contest_deployment_1.0.1.yaml
@@ -15,6 +15,7 @@ spec:
         ports:
           - containerPort: 8080
         livenessProbe:
+          failureThreshold: 1
           httpGet:
             path: /livenessProbe
             port: 8080
@@ -24,6 +25,7 @@ spec:
           initialDelaySeconds: 3
           periodSeconds: 3
         readinessProbe:
+          failureThreshold: 1
           httpGet:
             path: /healthCheck
             port: 8080
